--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oi luana rs</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="envelope-wrapper">
-            <div class="envelope">
-                <div class="letter">
-                    <div class="text">
-                        <strong>Oi Luana rs</strong>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ex animi est laudantium, repudiandae, repellendus fugiat excepturi labore quibusdam officiis quasi modi sed laboriosam error quo laborum mollitia, perferendis numquam!</p>
-                    </div>
+    <div class="container">  
+        <div class="oivida">
+            <div class="envelope"></div>
+            <div class="front"></div>
+            <div class="card">
+                <div class="text"></div>
+                <div class="heart"></div>
+                <div class="hearts">
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+                    <div class="four"></div>
+                    <div class="five"></div>
                 </div>
             </div>
-        </div>
+            </div>
+        <div class="shadow"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
