--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
             <div class="envelope"></div>
             <div class="front"></div>
             <div class="card">
-                <div class="text"></div>
+                <div class="text">
+                    <br>
+                    <span class="bonita">Oi boneca</span>
+                    <br>
+                    <br>
+                    Eu sei que eu falei que ia fazer uma coisinha simples, e ia mesmo, era pra ser só essa cartinha falando o quanto eu te amo, mas eu resolvi fazer um pouquinho mais...
+                </div>
                 <div class="heart"></div>
                 <div class="hearts">
                     <div class="one"></div>
