--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             </div>
         <div class="shadow"></div>
     </div>
+    <!-- <div class="container2">
+        <div class="msg">Eu sei que não to do seu lado pra poder te abraçar...</div>
+    </div> -->
     <script src="script.js"></script>
 </body>
 </html>
